deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protools-activiti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protools-activiti
  template:
    metadata:
      labels:
        app: protools-activiti
    spec:
      containers:
        - name: protools-activiti
          image: mailinenguyen/protools-activiti
